# PixelBoy

./: .gitignore  .gitmodules  CMakeLists.txt  Gameboy Emulator.sln  Gameboy Emulator.vcxproj  Gameboy Emulator.vcxproj.filters  README.md  imgui.ini
include/: apu.h  apu.hpp  cpu.h  cpu.hpp  cpu_cb.h  cpu_cb.hpp  input.h  interface.h  interface.hpp  interrupts.h  interrupts.hpp  io.h  io.hpp  logging.h  main.h  memory.h  memory.hpp  ppu.h  ppu.hpp  rom.h  rom.hpp  timer.h  timer.hpp
include/frontends/: frontend.h  frontend.hpp  imgui_frontend.hpp  opengl_frontend.hpp
include/frontends/opengl/: audio.h  frontend.h
include/glad/: glad.h
include/mbc/: mbc.h  mbc1.h  mbc2.h  mbc3.h  mbc5.h
src/: apu.c  apu.cpp  cpu.c  cpu.cpp  cpu_cb.c  cpu_cb.cpp  input.cpp  interface.cpp  interrupts.c  interrupts.cpp  io.c  io.cpp  logging.c  main.c  main.cpp  memory.c  memory.cpp  ppu.c  ppu.cpp  rom.c  rom.cpp  timer.c  timer.cpp
src/frontends/: imgui_frontend.cpp  opengl_frontend.c  opengl_frontend.cpp
src/frontends/opengl/: audio.c  frontend.c
src/glad/: glad.c
src/mbc/: mbc1.c  mbc1_old.c  mbc2.c  mbc3.c  mbc5.c
